[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-activity-tracker"
version = "0.1.0"
description = "Track and analyze GitHub repository activity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["requests>=2.28.0"]

[project.scripts]
gh-activity = "gh_activity_tracker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_activity_tracker"]